@@ -6,6 +6,7 @@ FEATURES
 from URLs, as appropriate (#64)
 BUGS
 * url_parse now handles URLs with user auth/ident information in them, stripping it out (#64)
+* url_parse now handles URL that are IPv6 addresses (#65)
 
 Version 1.6.0
 -------------------------------------------------------------------------
